--- a/new_fedora_host.yml
+++ b/new_fedora_host.yml
@@ -4,8 +4,14 @@
   become: true
 
   tasks:
-  - name: Install new Fedora host
+  - name: Update all packages
+    dnf:
+      name: "*"
+      state: latest
+
+  - name: Install packages
     dnf:
       name:
         - emacs-nox
         - git-core
+
